[package]
name = "async_scheduler"
version = "0.1.0"
authors = ["BadConfig array.clean@gmail.com github/badconfig"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.15.0"
tokio = {version = "0.2", features = ["macros","rt-threaded", "full"]}
tokio-diesel = "0.3.0"
chrono = "0.4.19"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono","numeric"] }
hex = "0.4.3"
serde = "1.0.126"
reqwest = { version = "0.10.10", features = ["json"]}
dotenv = "0.15.0"
diesel_migrations = "1.4.0"
tokio-cron-scheduler = "0.2.1"
serde_json = { version = "1.0.64"}
bigdecimal = "0.1.0"

anyhow = "1.0"
num-bigint = "0.4.0"
