[package]
name = "gton_api_server"
version = "0.1.0"
authors = ["badconfig <array.clean@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
async-trait = "0.1.50"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono","numeric","uuid","uuidv07"] }
bigdecimal = {version = "0.1.0", features = ["serde"]}
tokio = {version = "0.2", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
postgres = "0.19.1"
chrono = { version = "0.4.10", features = ["serde"] }
r2d2 = "0.8.9"
qstring = "0.7.2"
dotenv = "0.15.0"
actix_web_dev = { git = "https://github.com/Engine-studio/actix-web-dev-tools" }

ethcontract = "0.11.3"
hex-literal = "0.3.1"
actix-cors = "0.5.4"
